fix stock.